--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "2.4.5",
+  "version": "2.4.6-dev.20240123",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -38,7 +38,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^2.4.5",
+    "@nestia/fetcher": "D:\\github\\samchon\\nestia\\packages\\fetcher\\nestia-fetcher-2.4.6-dev.20240123.tgz",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@nestjs/platform-express": ">=7.0.1",
@@ -51,7 +51,7 @@
     "typia": "^5.3.10"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=2.4.5",
+    "@nestia/fetcher": ">=2.4.6-dev.20240123",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@nestjs/platform-express": ">=7.0.1",
@@ -72,6 +72,7 @@
     "commander": "^10.0.0",
     "comment-json": "^4.2.3",
     "eslint-plugin-deprecation": "^1.4.1",
+    "fastify": "^4.25.2",
     "git-last-commit": "^1.0.1",
     "inquirer": "^8.2.5",
     "rimraf": "^3.0.2",
