--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@nestia/station",
-  "version": "2.4.6-dev.20240123",
+  "version": "2.4.6",
   "description": "Nestia station",
   "main": "prettier.config.js",
   "scripts": {
