--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "2.4.6-dev.20240123",
+  "version": "2.4.6",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -34,7 +34,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "D:\\github\\samchon\\nestia\\packages\\fetcher\\nestia-fetcher-2.4.6-dev.20240123.tgz",
+    "@nestia/fetcher": "^2.4.6",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
@@ -46,7 +46,7 @@
     "typia": "^5.3.10"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=2.4.6-dev.20240123",
+    "@nestia/fetcher": ">=2.4.6",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
