--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -32,6 +32,10 @@
   "devDependencies": {
     "@nestia/core": "^2.4.0",
     "@nestia/fetcher": "^2.4.0",
+    "@nestjs/common": "^10.3.1",
+    "@nestjs/core": "^10.3.1",
+    "@nestjs/platform-express": "^10.3.1",
+    "@nestjs/platform-fastify": "^10.3.1",
     "@types/express": "^4.17.21",
     "@types/node": "^20.3.3",
     "dotenv": "^16.3.1",
