--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/migrate",
-  "version": "0.6.2",
+  "version": "0.7.0-dev.20240201",
   "description": "Migration program from swagger to NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -9,8 +9,9 @@
   },
   "scripts": {
     "build": "rimraf lib && tsc",
+    "bundle": "ts-node src/executable/bundle.ts",
     "dev": "npm run build -- --watch",
-    "prepare": "ts-patch install && typia patch && ts-node src/executable/bundle.ts",
+    "prepare": "ts-patch install && typia patch && npm run bundle",
     "test": "node lib/test"
   },
   "repository": {
@@ -37,6 +38,7 @@
     "@nestjs/platform-express": "^10.3.1",
     "@nestjs/platform-fastify": "^10.3.1",
     "@types/express": "^4.17.21",
+    "@types/inquirer": "^9.0.7",
     "@types/node": "^20.3.3",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
