--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -31,8 +31,8 @@
   },
   "homepage": "https://github.com/samchon/nestia#readme",
   "devDependencies": {
-    "@nestia/core": "2.5.0",
-    "@nestia/fetcher": "2.5.0",
+    "@nestia/core": "^2.5.0",
+    "@nestia/fetcher": "^2.5.0",
     "@nestjs/common": "^10.3.1",
     "@nestjs/core": "^10.3.1",
     "@nestjs/platform-express": "^10.3.1",
