Fix `@nestia/Fetcher` import bug

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,10 @@ jobs:
         with:
           version: 8
 
-      # - name: test
-      #   working-directory: ./test
-      #   run: npm start
+      - name: test
+        working-directory: ./test
+        run: npm start
 
       - name: migrate
         working-directory: ./packages/migrate
-        run: npm install && npm run build && npm run test
+        run: pnpm install && npm run build && npm run test
