--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "2.5.2-dev.20240203",
+  "version": "2.5.2",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -32,7 +32,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^2.5.2-dev.20240203",
+    "@nestia/fetcher": "^2.5.2",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
@@ -44,7 +44,7 @@
     "typia": "^5.4.4"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=2.5.2-dev.20240203",
+    "@nestia/fetcher": ">=2.5.2",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "prettier": ">=2.0.0",
