--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/samchon/nestia.git"
+    "url": "https://github.com/samchon/nestia"
   },
   "author": "Jeongho Nam",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/samchon/nestia/issues"
   },
-  "homepage": "https://github.com/samchon/nestia#readme",
+  "homepage": "https://nestia.io",
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "prettier": "^3.2.4",
