--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/migrate",
-  "version": "0.7.7",
+  "version": "0.7.8",
   "description": "Migration program from swagger to NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -29,7 +29,7 @@
   "bugs": {
     "url": "https://github.com/samchon/nestia/issues"
   },
-  "homepage": "https://github.com/samchon/nestia#readme",
+  "homepage": "https://nestia.io",
   "devDependencies": {
     "@nestia/core": "2.5.4",
     "@nestia/fetcher": "2.5.4",
@@ -37,6 +37,7 @@
     "@nestjs/core": "^10.3.1",
     "@nestjs/platform-express": "^10.3.1",
     "@nestjs/platform-fastify": "^10.3.1",
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.3.3",
@@ -53,8 +54,9 @@
   "dependencies": {
     "commander": "10.0.0",
     "inquirer": "8.2.5",
+    "prettier": "^3.2.5",
     "typescript": "^5.3.3",
-    "typia": "^5.4.5"
+    "typia": "^5.4.6"
   },
   "files": [
     "lib",
