--- a/website/package.json
+++ b/website/package.json
@@ -18,18 +18,20 @@
     "url": "https://github.com/samchon/nestia/issues"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.6",
-    "@emotion/styled": "^11.10.6",
-    "@mui/material": "^5.12.0",
-    "next": "^13.0.6",
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@mui/icons-material": "5.15.6",
+    "@mui/material": "5.15.6",
+    "@mui/system": "5.15.6",
+    "next": "13.0.6",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "18.11.10",
-    "@types/react": "^18.0.35",
+    "@types/react": "18.0.35",
     "gh-pages": "^5.0.0",
     "next-sitemap": "^4.0.7",
     "rimraf": "^5.0.0",
