--- a/website/package.json
+++ b/website/package.json
@@ -4,7 +4,7 @@
   "description": "Nestia Guide Documents",
   "private": true,
   "scripts": {
-    "build": "rimraf .next && rimraf .out && next build && next export && next-sitemap",
+    "build": "rimraf .next && rimraf .out && next build && next-sitemap",
     "deploy": "node deploy",
     "dev": "next dev"
   },
@@ -23,7 +23,7 @@
     "@mui/icons-material": "5.15.6",
     "@mui/material": "5.15.6",
     "@mui/system": "5.15.6",
-    "next": "13.0.6",
+    "next": "14.1.0",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
     "react": "18.2.0",
@@ -33,7 +33,7 @@
     "@types/node": "18.11.10",
     "@types/react": "18.0.35",
     "gh-pages": "^5.0.0",
-    "next-sitemap": "^4.0.7",
+    "next-sitemap": "^4.2.3",
     "rimraf": "^5.0.0",
     "typescript": "^5.3.2"
   }
