--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,31 +36,27 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^2.5.6",
-    "@nestjs/common": ">=7.0.1",
-    "@nestjs/core": ">=7.0.1",
-    "@nestjs/platform-express": ">=7.0.1",
-    "@nestjs/platform-fastify": ">=7.0.1",
     "detect-ts-node": "^1.0.5",
     "glob": "^7.2.0",
-    "multer": "1.4.5-lts.1",
-    "raw-body": ">=2.0.0",
-    "reflect-metadata": ">=0.1.12",
-    "rxjs": ">=6.0.0",
-    "typia": "^5.4.5"
+    "multer": "1.4.5-lts.1"
   },
   "peerDependencies": {
     "@nestia/fetcher": ">=2.5.6",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
-    "@nestjs/platform-express": ">=7.0.1",
-    "@nestjs/platform-fastify": ">=7.0.1",
     "raw-body": ">=2.0.0",
     "reflect-metadata": ">=0.1.12",
     "rxjs": ">=6.0.0",
     "typia": ">=5.4.5 <6.0.0"
   },
   "devDependencies": {
+    "@nestia/fetcher": ">=2.5.6",
+    "@nestjs/common": ">=7.0.1",
+    "@nestjs/core": ">=7.0.1",
+    "raw-body": ">=2.0.0",
+    "reflect-metadata": ">=0.1.12",
+    "rxjs": ">=6.0.0",
+    "typia": "^5.4.5",
     "@fastify/multipart": "^8.1.0",
     "@types/express": "^4.17.15",
     "@types/glob": "^7.2.0",
