--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -36,28 +36,25 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
+    "@nestia/fetcher": "^2.5.6",
     "detect-ts-node": "^1.0.5",
     "glob": "^7.2.0",
-    "multer": "1.4.5-lts.1"
+    "multer": "1.4.5-lts.1",
+    "raw-body": "^2.5.2",
+    "rxjs": "^7.8.1",
+    "typia": "^5.4.5"
   },
   "peerDependencies": {
     "@nestia/fetcher": ">=2.5.6",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
-    "raw-body": ">=2.0.0",
     "reflect-metadata": ">=0.1.12",
-    "rxjs": ">=6.0.0",
     "typia": ">=5.4.5 <6.0.0"
   },
   "devDependencies": {
-    "@nestia/fetcher": ">=2.5.6",
-    "@nestjs/common": ">=7.0.1",
-    "@nestjs/core": ">=7.0.1",
-    "raw-body": ">=2.0.0",
-    "reflect-metadata": ">=0.1.12",
-    "rxjs": ">=6.0.0",
-    "typia": "^5.4.5",
     "@fastify/multipart": "^8.1.0",
+    "@nestjs/common": "^10.3.3",
+    "@nestjs/core": "^10.3.3",
     "@types/express": "^4.17.15",
     "@types/glob": "^7.2.0",
     "@types/inquirer": "^9.0.3",
@@ -71,6 +68,7 @@
     "fastify": "^4.25.2",
     "git-last-commit": "^1.0.1",
     "inquirer": "^8.2.5",
+    "raw-body": "^2.5.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
     "ts-patch": "^3.1.0",
