--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/migrate",
-  "version": "0.7.12",
+  "version": "0.8.0",
   "description": "Migration program from swagger to NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -31,8 +31,9 @@
   },
   "homepage": "https://nestia.io",
   "devDependencies": {
-    "@nestia/core": "2.5.6",
-    "@nestia/fetcher": "2.5.6",
+    "@nestia/core": "^2.5.8",
+    "@nestia/e2e": "^0.4.1",
+    "@nestia/fetcher": "^2.5.8",
     "@nestjs/common": "^10.3.3",
     "@nestjs/core": "^10.3.3",
     "@nestjs/platform-express": "^10.3.3",
@@ -56,7 +57,7 @@
     "inquirer": "8.2.5",
     "prettier": "^3.2.5",
     "typescript": "^5.3.3",
-    "typia": "^5.4.8"
+    "typia": "^5.4.9"
   },
   "files": [
     "lib",
