--- a/website/package.json
+++ b/website/package.json
@@ -23,18 +23,24 @@
     "@mui/icons-material": "5.15.6",
     "@mui/material": "5.15.6",
     "@mui/system": "5.15.6",
+    "@nestia/migrate": "^0.8.2",
+    "@stackblitz/sdk": "^1.9.0",
     "next": "14.1.0",
     "nextra": "latest",
     "nextra-theme-docs": "latest",
+    "prettier": "^3.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-mui-fileuploader": "^0.5.2",
+    "typia": "^5.4.9"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/node": "18.11.10",
     "@types/react": "18.0.35",
     "gh-pages": "^5.0.0",
     "next-sitemap": "^4.2.3",
     "rimraf": "^5.0.0",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.3"
   }
 }
