--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -5,7 +5,11 @@ on:
       - master
     paths:
       - 'website/**'
-
+  pull_request:
+    branches:
+      - master
+    paths:
+      - 'website/**'
 jobs:
   deploy:
     runs-on: ubuntu-latest
