--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,7 @@ version: 2
 updates:
 #######################################################
   - package-ecosystem: 'npm'
-    directory: '/packages/core'
+    directory: '/packages/test'
     schedule:
       interval: 'daily'
     # versioning-strategy: increase
