--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,11 +5,13 @@ on:
       - 'packages/*/src/**'
       - 'packages/*/package.json'
       - 'test/**'
+      - 'test/package.json'
   pull_request:
     paths:
       - 'packages/*/src/**'
       - 'packages/*/package.json'
       - 'test/**'
+      - 'test/package.json'
 
 jobs:
   Ubuntu:
