--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -5,11 +5,7 @@ on:
       - master
     paths:
       - 'website/**'
-  pull_request:
-    branches:
-      - master
-    paths:
-      - 'website/**'
+      - 'website/package.json'
 jobs:
   deploy:
     runs-on: ubuntu-latest
