--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/migrate",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "Migration program from swagger to NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -34,17 +34,18 @@
   },
   "homepage": "https://nestia.io",
   "devDependencies": {
-    "@nestia/core": "^2.5.15",
+    "@nestia/core": "^2.6.0",
     "@nestia/e2e": "^0.4.1",
-    "@nestia/fetcher": "^2.5.15",
-    "@nestjs/common": "^10.3.3",
-    "@nestjs/core": "^10.3.3",
-    "@nestjs/platform-express": "^10.3.3",
-    "@nestjs/platform-fastify": "^10.3.3",
+    "@nestia/fetcher": "^2.6.0",
+    "@nestjs/common": "^10.3.5",
+    "@nestjs/core": "^10.3.5",
+    "@nestjs/platform-express": "^10.3.5",
+    "@nestjs/platform-fastify": "^10.3.5",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.3.3",
+    "@types/swagger2openapi": "^7.0.4",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
     "rimraf": "^5.0.1",
@@ -55,9 +56,12 @@
     "typescript-transform-paths": "^3.4.6"
   },
   "dependencies": {
+    "@apiture/openapi-down-convert": "^0.13.0",
     "commander": "10.0.0",
     "inquirer": "8.2.5",
+    "openapi-types": "^12.1.3",
     "prettier": "^3.2.5",
+    "swagger2openapi": "^7.0.8",
     "tstl": "^2.5.13",
     "typescript": "^5.4.2",
     "typia": "^5.5.7"
