--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@nestia/station",
-  "version": "2.6.2",
+  "version": "2.6.3",
   "description": "Nestia station",
   "main": "prettier.config.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "package:latest": "node deploy latest",
     "package:next": "node deploy next",
     "package:tgz": "node deploy tgz",
-    "prettier": "prettier packages/*/src/**/*.ts --write && prettier test/**/*.ts --write",
+    "prettier": "prettier packages/*/src/**/*.ts --write && prettier benchmark/**/*.ts && prettier test/**/*.ts --write",
     "test": "cd test && npm run start"
   },
   "repository": {
