--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -45,11 +45,14 @@
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
     "@types/node": "^20.3.3",
+    "@types/swagger-ui-express": "^4.1.6",
     "dotenv": "^16.3.1",
     "dotenv-expand": "^10.0.0",
+    "express": "^4.19.2",
     "rimraf": "^5.0.1",
     "serialize-error": "^4.1.0",
     "source-map-support": "^0.5.21",
+    "swagger-ui-express": "^5.0.0",
     "ts-node": "^10.9.1",
     "ts-patch": "^3.1.0",
     "typescript-transform-paths": "^3.4.6"
