--- a/website/package.json
+++ b/website/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/samchon/nest7a"
+    "url": "https://github.com/samchon/nestia"
   },
   "author": "Jeongho Nam",
   "license": "MIT",
