--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -43,10 +43,13 @@
     "detect-ts-node": "^1.0.5",
     "glob": "^7.2.0",
     "multer": "1.4.5-lts.1",
+    "path-parser": "^6.1.0",
     "raw-body": "^2.0.0",
     "reflect-metadata": ">=0.1.12",
     "rxjs": ">=6.0.3",
-    "typia": "^6.0.3"
+    "tgrid": "^0.10.3",
+    "typia": "^6.0.3",
+    "ws": "^7.5.3"
   },
   "peerDependencies": {
     "@nestia/fetcher": ">=3.0.5",
@@ -65,6 +68,7 @@
     "@types/inquirer": "^9.0.3",
     "@types/multer": "^1.4.11",
     "@types/ts-expose-internals": "npm:ts-expose-internals@5.2.2",
+    "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "commander": "^10.0.0",
