--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -60,6 +60,7 @@
     "@types/express": "^4.17.15",
     "@types/glob": "^7.2.0",
     "@types/node": "^18.11.15",
+    "@types/ts-expose-internals": "npm:ts-expose-internals@5.4.5",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
