--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "3.1.0-dev.20240429",
+  "version": "3.1.1",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -32,7 +32,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^3.1.0-dev.20240429",
+    "@nestia/fetcher": "^3.1.1",
     "@samchon/openapi": "^0.1.21",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
@@ -46,7 +46,7 @@
     "typia": "^6.0.3"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=3.1.0-dev.20240429",
+    "@nestia/fetcher": ">=3.1.1",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
