--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -14,6 +14,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
+      - name: Install Core
+        working-directory: packages/core
+        run: npm install
       - name: Build
         working-directory: website 
         run: npm install && npm run build
