--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/migrate",
-  "version": "0.13.10",
+  "version": "0.13.11",
   "description": "Migration program from swagger to NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -22,9 +22,11 @@
   "keywords": [
     "migration",
     "swagger",
+    "openapi generator",
     "NestJS",
     "nestia",
     "SDK",
+    "RPC",
     "Mockup Simulator"
   ],
   "author": "Jeongho Nam",
@@ -34,13 +36,13 @@
   },
   "homepage": "https://nestia.io",
   "devDependencies": {
-    "@nestia/core": "^3.1.1",
+    "@nestia/core": "^3.1.3",
     "@nestia/e2e": "^0.4.3",
-    "@nestia/fetcher": "^3.1.1",
-    "@nestjs/common": "^10.3.5",
-    "@nestjs/core": "^10.3.5",
-    "@nestjs/platform-express": "^10.3.5",
-    "@nestjs/platform-fastify": "^10.3.5",
+    "@nestia/fetcher": "^3.1.3",
+    "@nestjs/common": "^10.3.8",
+    "@nestjs/core": "^10.3.8",
+    "@nestjs/platform-express": "^10.3.8",
+    "@nestjs/platform-fastify": "^10.3.8",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
