--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "3.1.3",
+  "version": "3.1.4",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -36,11 +36,12 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^3.1.3",
+    "@nestia/fetcher": "^3.1.4",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@samchon/openapi": "^0.1.21",
     "detect-ts-node": "^1.0.5",
+    "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
     "multer": "1.4.5-lts.1",
     "path-parser": "^6.1.0",
@@ -52,7 +53,7 @@
     "ws": "^7.5.3"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=3.1.3",
+    "@nestia/fetcher": ">=3.1.4",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
