--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/core",
-  "version": "3.1.4",
+  "version": "3.2.0",
   "description": "Super-fast validation decorators of NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -36,7 +36,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "D:\\github\\samchon\\nestia\\packages\\fetcher\\nestia-fetcher-3.1.4.tgz",
+    "@nestia/fetcher": "^3.2.0",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "@samchon/openapi": "^0.1.21",
@@ -48,12 +48,12 @@
     "raw-body": "^2.0.0",
     "reflect-metadata": ">=0.1.12",
     "rxjs": ">=6.0.3",
-    "tgrid": "^0.11.1",
+    "tgrid": "^1.0.0",
     "typia": "^6.0.3",
     "ws": "^7.5.3"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=3.1.4",
+    "@nestia/fetcher": ">=3.2.0",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
