--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "3.1.4",
+  "version": "3.2.0",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -32,7 +32,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "D:\\github\\samchon\\nestia\\packages\\fetcher\\nestia-fetcher-3.1.4.tgz",
+    "@nestia/fetcher": "^3.2.0",
     "@samchon/openapi": "^0.1.21",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
@@ -46,7 +46,7 @@
     "typia": "^6.0.3"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=3.1.4",
+    "@nestia/fetcher": ">=3.2.0",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
@@ -67,7 +67,7 @@
     "eslint": "^8.29.0",
     "eslint-plugin-deprecation": "^1.4.1",
     "rimraf": "^3.0.2",
-    "tgrid": "^0.11.1",
+    "tgrid": "^1.0.0",
     "ts-patch": "^3.1.2",
     "typescript": "^5.4.5",
     "typescript-transform-paths": "^3.4.4",
