--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -14,6 +14,9 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20.x
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Root Install
         run: npm run package:tgz
       - name: Build
