--- a/packages/e2e/package.json
+++ b/packages/e2e/package.json
@@ -37,7 +37,7 @@
     "rimraf": "^4.1.2",
     "ts-node": "^10.9.1",
     "ts-patch": "^3.1.0",
-    "typescript": "^5.4.2",
+    "typescript": "<5.5.0",
     "typia": "^6.1.1"
   },
   "dependencies": {
