--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "name": "@nestia/station",
-  "version": "3.2.6",
+  "version": "3.3.0-dev.20240624",
   "description": "Nestia station",
   "scripts": {
     "build": "node build/index.js",
