Upgrade `ts-patch@3.2.1` for `typescript@5.2.2`.

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -41,7 +41,7 @@
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.11.16",
     "rimraf": "^3.0.2",
-    "typescript": "<5.5.0"
+    "typescript": "^5.5.2"
   },
   "files": [
     "bin",
