--- a/website/package.json
+++ b/website/package.json
@@ -34,7 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-mui-fileuploader": "^0.5.2",
-    "typia": "^6.2.1"
+    "typia": "^6.3.1"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
@@ -44,6 +44,6 @@
     "next-sitemap": "^4.2.3",
     "rimraf": "^5.0.0",
     "typedoc": "^0.25.13",
-    "typescript": "<5.5.0"
+    "typescript": "^5.5.2"
   }
 }
