--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -68,8 +68,8 @@
     "inquirer": "8.2.5",
     "prettier": "^3.2.5",
     "tstl": "^3.0.0",
-    "typescript": "<5.5.0",
-    "typia": "^6.2.1"
+    "typescript": "^5.5.2",
+    "typia": "^6.3.1"
   },
   "files": [
     "lib",
