--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "3.3.0-dev.20240624",
+  "version": "3.3.0",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -32,7 +32,7 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "^3.3.0-dev.20240624",
+    "@nestia/fetcher": "^3.3.0",
     "@samchon/openapi": "^0.1.21",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
@@ -43,15 +43,15 @@
     "tsconfck": "^2.0.1",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^3.0.0",
-    "typia": "^6.0.3"
+    "typia": "^6.3.1"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=3.3.0-dev.20240624",
+    "@nestia/fetcher": ">=3.3.0",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
     "ts-node": ">=10.6.0",
-    "typia": ">=6.0.3 <7.0.0"
+    "typia": ">=6.3.1 <7.0.0"
   },
   "devDependencies": {
     "@nestia/e2e": "^0.4.3",
@@ -67,9 +67,9 @@
     "eslint": "^8.29.0",
     "eslint-plugin-deprecation": "^1.4.1",
     "rimraf": "^3.0.2",
-    "tgrid": "^1.0.0",
-    "ts-patch": "^3.2.0",
-    "typescript": "<5.5.0",
+    "tgrid": "^1.0.2",
+    "ts-patch": "^3.2.1",
+    "typescript": "^5.5.2",
     "typescript-transform-paths": "^3.4.4",
     "uuid": "^9.0.0"
   },
