--- a/packages/migrate/package.json
+++ b/packages/migrate/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/migrate",
-  "version": "0.14.0-dev.20240627",
+  "version": "0.14.0",
   "description": "Migration program from swagger to NestJS",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -36,9 +36,9 @@
   },
   "homepage": "https://nestia.io",
   "devDependencies": {
-    "@nestia/core": "^3.2.5",
+    "@nestia/core": "^3.3.2",
     "@nestia/e2e": "^0.6.0",
-    "@nestia/fetcher": "^3.2.5",
+    "@nestia/fetcher": "^3.3.2",
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
     "@nestjs/platform-express": "^10.3.8",
@@ -57,7 +57,7 @@
     "serialize-error": "^4.1.0",
     "source-map-support": "^0.5.21",
     "swagger-ui-express": "^5.0.0",
-    "tgrid": "^1.0.1",
+    "tgrid": "^1.0.2",
     "ts-node": "^10.9.1",
     "ts-patch": "^3.2.1",
     "typescript-transform-paths": "^3.4.6"
