--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nestia/sdk",
-  "version": "3.5.0",
+  "version": "3.6.0",
   "description": "Nestia SDK and Swagger generator",
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
@@ -32,9 +32,9 @@
   },
   "homepage": "https://nestia.io",
   "dependencies": {
-    "@nestia/fetcher": "../fetcher/nestia-fetcher-3.5.0.tgz",
-    "@nestia/core": "../core/nestia-core-3.5.0.tgz",
-    "@samchon/openapi": "^0.3.0",
+    "@nestia/fetcher": "^3.6.0",
+    "@nestia/core": "^3.6.0",
+    "@samchon/openapi": "^0.3.4",
     "cli": "^1.0.1",
     "get-function-location": "^2.0.0",
     "glob": "^7.2.0",
@@ -44,16 +44,16 @@
     "tsconfck": "^2.0.1",
     "tsconfig-paths": "^4.1.1",
     "tstl": "^3.0.0",
-    "typia": "^6.4.2"
+    "typia": "^6.4.3"
   },
   "peerDependencies": {
-    "@nestia/fetcher": ">=3.5.0",
-    "@nestia/core": ">=3.5.0",
+    "@nestia/fetcher": ">=3.6.0",
+    "@nestia/core": ">=3.6.0",
     "@nestjs/common": ">=7.0.1",
     "@nestjs/core": ">=7.0.1",
     "reflect-metadata": ">=0.1.12",
     "ts-node": ">=10.6.0",
-    "typia": ">=6.4.2 <7.0.0"
+    "typia": ">=6.4.3 <7.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
