Succeeded to revive SDK generator

--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "build": "rimraf lib && tsc",
-    "dev": "rimraf lib && tsc --watch",
+    "dev": "tsc -p tsconfig.test.json --watch",
     "eslint": "eslint ./**/*.ts",
     "prepare": "ts-patch install && typia patch"
   },
